--- a/frontend/src/app/discounts/discount-form.component.html
+++ b/frontend/src/app/discounts/discount-form.component.html
@@ -39,7 +39,12 @@
 					</div>
 
 					<div class="form-group">
-						<label for="value">Discount Value *</label>
+						<label for="value">
+							Discount Value *
+							<span class="helper-text" *ngIf="discountForm.get('type')?.value === 'percentage'">
+								(0-100%)
+							</span>
+						</label>
 						<div class="value-input-group">
 							<input
 								type="number"
@@ -48,6 +53,7 @@
 								placeholder="0.00"
 								step="0.01"
 								min="0"
+								[max]="discountForm.get('type')?.value === 'percentage' ? 100 : 99999.99"
 								class="form-input"
 							/>
 							<span class="value-suffix">
