--- a/frontend/src/app/discounts/discount-form.component.scss
+++ b/frontend/src/app/discounts/discount-form.component.scss
@@ -156,6 +156,13 @@
 	font-weight: 500;
 }
 
+.helper-text {
+	font-size: 0.75rem;
+	color: #666;
+	font-weight: 400;
+	margin-left: 0.5rem;
+}
+
 .checkbox-group {
 	label {
 		display: flex;
